<resources>
    <string name="app_name">pokeeApp</string>
    <string name="pokee">pokee</string>
    <string name="sign_in">SIGN IN</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="first_name">What\'s your first name?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="last_name">What\'s your last name?</string>
    <string name="user_name">User Name</string>
    <string name="phone_number">Enter your phone number</string>
    <string name="we_will_send_you_a_verification_code">We will send you a verification code</string>
    <string name="next">Next</string>
    <string name="enter_your_verification_code">Enter your verification code</string>
    <string name="didn_t_get_the_code_resend">Didn\'t get the code? <b>Resend</b></string>
    <string name="_60_seconds">60 seconds</string>
    <string name="incorrect_otp">Incorrect OTP</string>
    <string name="set_username">Vaibhav Bansal, 24</string>
    <string name="set_userid">bond007</string>
    <string name="verifying_otp">Verifying OTP</string>
    <string name="verify">Verify</string>
</resources>